WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284702
AudioSampleBufferConverter Incorrectly set number of out packets to 1
https://bugs.webkit.org/show_bug.cgi?id=284702
Summary
AudioSampleBufferConverter Incorrectly set number of out packets to 1
Jean-Yves Avenard [:jya]
Reported
2024-12-14 17:33:06 PST
numOutputPackets are always set to 1 This is a regression from
bug 283905
It causes lots of error logs from AudioToolbox
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-14 17:33:41 PST
<
rdar://problem/141499128
>
Jean-Yves Avenard [:jya]
Comment 2
2024-12-14 17:34:24 PST
https://searchfox.org/wubkat/rev/d81c1b27d2ba489e7f086c79af5da4235e0308ee/Source/WebCore/platform/audio/cocoa/AudioSampleBufferConverter.mm#445
Jean-Yves Avenard [:jya]
Comment 3
2024-12-14 18:43:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37978
EWS
Comment 4
2024-12-14 22:04:42 PST
Committed
287850@main
(d6d9a451a70c): <
https://commits.webkit.org/287850@main
> Reviewed commits have been landed. Closing PR #37978 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug