AudioSampleBufferConverter Incorrectly set number of out packets to 1 https://bugs.webkit.org/show_bug.cgi?id=284702 rdar://141499128

Reviewed by Eric Carlson.

Regression introduced in 287362@main.
We partially revert back to the proper frame calculation when the source is PCM.

Also change the log level in CMUtilities getPacketDescriptions as it's unnecessary verbose
when used to compress PCM data.

* Source/WebCore/platform/audio/cocoa/AudioSampleBufferConverter.mm:
(WebCore::AudioSampleBufferConverter::provideSourceDataNumOutputPackets):

Canonical link: https://commits.webkit.org/287850@main